# SDL3-Vulkan

./: .gitmodules  CMakeLists.txt  README.md  build-and-run.sh  build.sh  run.sh
src/: global_variables.c  main.c  reimu-sdl-extensions.c  reimus-sdl-extensions.c
src/headers/: reimu-sdl-extensions.h  reimus-sdl-extensions.h
src/sdl/: event.c  initialize.c  iterate.c  quit.c
